--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/cli": "^3.86.1",
+    "@sanity/client": "^6.29.1",
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
