--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^6.29.1",
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-loaders": "^3.0.1",
