--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-audio-player": "^0.17.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^7.5.1",
     "react-spinners": "^0.17.0",
