--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@sanity/cli": "^3.86.1",
     "@sanity/client": "^6.29.1",
     "@tailwindcss/vite": "^4.1.4",
+    "firebase": "^11.7.3",
     "react": "^19.0.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^19.0.0",
